--- a/KnowledgeCenter.html
+++ b/KnowledgeCenter.html
@@ -8,7 +8,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="public/css/styles.css">
-    <link rel="stylesheet" href="public/css/knowledge-center.css">
+    <link rel="stylesheet" href="./public/css/knowledge-center.css">
 </head>
 <body>
     <!-- Navigation -->
