--- a/KnowledgeCenter.html
+++ b/KnowledgeCenter.html
@@ -7,8 +7,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="public/css/styles.css">
-    <link rel="stylesheet" href="./public/css/knowledge-center.css">
+    <link rel="stylesheet" href="Public/css/styles.css">
+    <link rel="stylesheet" href="/Public/css/knowledge-center.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -21,7 +21,7 @@
                 <li><a href="plans.html">Plans</a></li>
             </ul>
             <div class="contact-icon">
-                <a href="#"><img src="public/Img/Request a demo.png" alt="Contact"></a>
+                <a href="#"><img src="Public/Img/Request a demo.png" alt="Contact"></a>
             </div>
         </nav>
     </header>
@@ -50,7 +50,7 @@
             <div class="row article-grid">
                 <div class="col-md-4 mb-4">
                     <article>
-                        <img src="public/Img/Property 1=Frame 23-1.png" alt="Article 1" class="img-fluid rounded">
+                        <img src="Public/Img/Property 1=Frame 23-1.png" alt="Article 1" class="img-fluid rounded">
                         <div class="article-info mt-3">
                             <p class="date text-muted">January 17, 2024 • Trend</p>
                             <h3>Top 10 Features of iWORKKZ That Every Startup Needs to Know</h3>
@@ -62,7 +62,7 @@
 
                 <div class="col-md-4 mb-4">
                     <article>
-                        <img src="public/Img/Property 1=Frame 23-2.png" alt="Article 2" class="img-fluid rounded">
+                        <img src="Public/Img/Property 1=Frame 23-2.png" alt="Article 2" class="img-fluid rounded">
                         <div class="article-info mt-3">
                             <p class="date text-muted">January 17, 2024 • Feature</p>
                             <h3>A Day in the Life with iWORKKZ: How to Maximize Productivity</h3>
@@ -74,7 +74,7 @@
 
                 <div class="col-md-4 mb-4">
                     <article>
-                        <img src="public/Img/Property 1=Frame 24-2.png" alt="Article 3" class="img-fluid rounded">
+                        <img src="Public/Img/Property 1=Frame 24-2.png" alt="Article 3" class="img-fluid rounded">
                         <div class="article-info mt-3">
                             <p class="date text-muted">January 17, 2024 • Tips</p>
                             <h3>How iWORKKZ Supports the Shift to Remote and Hybrid Work Environments</h3>
