--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iWorkzz - Unlock the Future of Work</title>
-    <link rel="stylesheet" href="public/css/styles.css">
+    <link rel="stylesheet" href="Public/css/styles.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -17,7 +17,7 @@
                 <li><a href="plans.html">Plans</a></li>
             </ul>
             <div class="contact-icon">
-                <a href="#"><img src="public/Img/Request a demo.png" alt="Contact"></a>
+                <a href="#"><img src="Public/Img/Request a demo.png" alt="Contact"></a>
             </div>
         </nav>
     </header>
@@ -26,7 +26,7 @@
     <section class="hero">
         <!-- Background Video -->
         <video id="background-video" autoplay muted loop playsinline class="background-video">
-            <source src="public/videos/videos.mp4" type="video/mp4">
+            <source src="Public/videos/videos.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
 
@@ -37,6 +37,6 @@
         </div>
     </section>
 
-    <script src="public/js/script.js"></script>
+    <script src="Public/js/script.js"></script>
 </body>
 </html>
